--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2> Mitigating the digital divide</h2>
+						<h2> Mitigating the digital divide in the age of Quantum Computing and Big Data</h2>
 						<p>I am a Phd Student in STEM Education whose work involves equity and access to emerging technologies (primarily Quantum Computing, Machine Learning, and Data Science) within K-12 and undergraduate education. </p>
 					</header>
 					<div class="highlights">
