--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
 
 								<!-- Text -->
 									<h3>About Me</h3>
-									<p>I am a current Phd student in STEM Education at UT Austin. Prior to my time in Austin I was a high school mathematics teacher in Los Angeles, CA in Watts and DTLA. My research focuses on the intersection of computing education, community advocacy, and the digital divide. I am currently involved in the creation and implementation of a a high school Quantum Computing course alongside the Quantum Research Center at the Applied Research Laboratories, as well as a number of mathematics and computer science teacher education roles within the Uteach program. Artifacts from these projects can be found within my Github repository. I will be relocating to Los Angeles in 2021, and currently looking for part- time roles in either education or machine learning and data science.
+									<p>I am a current Phd student in STEM Education at UT Austin and M.S. in computational Science, Engineering, and Mathematics. Prior to my time in Austin I was a high school mathematics teacher in Los Angeles, CA . My research focuses on the leveraging Natural Language Processing and knowledge graphs to create educational technologies. I have also participated in several computer science education projects, to include the nation's first year long Quantum Computing course alongside the Quantum Research Center at the Applied Research Laboratories and a data science education project with MathAction. I have also served in a number of mathematics and computer science teacher education roles within the Uteach program. I am currently working as an AI Research Intern at Finetune Learning and will be finished with my Phd in December of 2022.
 
 
 
