--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Joel  A.  Walsh</h1>
-					<p>Computer Science and Mathematics Educator<br />
+					<p>NLP andMachine Learning researcher/ educator<br />
 					</p>
 				</div>
 				
