--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,9 @@
 
 								<!-- Text -->
 									<h3>About Me</h3>
-									<p>I am a current Phd student in STEM Education at UT Austin and M.S. in computational Science, Engineering, and Mathematics. Prior to my time in Austin I was a high school mathematics teacher in Los Angeles, CA . My research focuses on the leveraging Natural Language Processing and knowledge graphs to create educational technologies. I have also participated in several computer science education projects, to include the nation's first year long Quantum Computing course alongside the Quantum Research Center at the Applied Research Laboratories and a data science education project with MathAction. I have also served in a number of mathematics and computer science teacher education roles within the Uteach program. I am currently working as an AI Research Intern at Finetune Learning and will be finished with my Phd in December of 2022.
+									<p>Current position: Software Engineer at <a href="https://mission.privateer.com//">Privateer Space</a>, where  I work on machine learning software. Prior to that I worked as an AI research intern at Finetune Learning. I have recently complete a Phd in STEM Education and an M.S. in Computational Science, Engineering, and Mathematics at UT Austin. 
+ Prior to my time in Austin I was a high school mathematics teacher in Los Angeles, CA . 
+My dissertation research focused on leveraging Natural Language Processing and knowledge graphs to create educational technologies. I have also participated in several computer science education projects, to include the nation's first year long Quantum Computing course alongside the Quantum Research Center at the Applied Research Laboratories and a data science education project with MathAction. I have served in a number of mathematics and computer science teacher education roles within the UT Uteach program.
 
 									<br> 
 
