--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Joel  A.  Walsh</h1>
-					<p>NLP and Machine Learning researcher/ educator<br />
+					<p>Software Engineer and Machine Learning researcher/ educator<br />
 					</p>
 				</div>
 				
@@ -46,7 +46,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2> Mitigating the digital divide in the age of Quantum Computing and Big Data</h2>
-						<p>I am a Phd Student in STEM Education whose work involves Natural Language Processing, Knowledge Graphs, and promoting access to emerging technologies (primarily Quantum Computing, Machine Learning, and Data Science) within K-12 and undergraduate education. </p>
+						<p>Software Engineer. Former public school teacher focused and promoting access to emerging technologies within K-12 and undergraduate education. </p>
 					</header>
 					<div class="highlights">
 						<section>
