--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Joel  A.  Walsh</h1>
+					<h1> Dr. Joel  A.  Walsh</h1>
 					<p>Software Engineer and Machine Learning researcher/ educator<br />
 					</p>
 				</div>
@@ -45,8 +45,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2> Mitigating the digital divide in the age of Quantum Computing and Big Data</h2>
-						<p>Software Engineer. Former public school teacher focused and promoting access to emerging technologies within K-12 and undergraduate education. </p>
+						<h2> Software Engineer (ML) and education advocate </h2>
+						<p> Former public school teacher focused on access to emerging technologies for historically undererepresented communities in tech. </p>
 					</header>
 					<div class="highlights">
 						<section>
