--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
 
 								<!-- Text -->
 									<h3>About Me</h3>
-									<p>Current position: Software Engineer at <a href="https://mission.privateer.com//">Privateer Space</a>, where  I work on machine learning software. Prior to that I worked as an AI research intern at Finetune Learning. I have recently complete a Phd in STEM Education and an M.S. in Computational Science, Engineering, and Mathematics at UT Austin. 
+									<p>Current positions: AI Learning Technologies Postdoctoral Fellow at USC Institute for Creative Technologies, ML Software Engineer at <a href="https://mission.privateer.com//">Privateer Space</a>, where  I work on machine learning software. Prior to that I worked as an AI research intern at Finetune Learning. I have recently complete a Phd in STEM Education and an M.S. in Computational Science, Engineering, and Mathematics at UT Austin. 
  Prior to my time in Austin I was a high school mathematics teacher in Los Angeles, CA . 
 My dissertation research focused on leveraging Natural Language Processing and knowledge graphs to create educational technologies. I have also participated in several computer science education projects, to include the nation's first year long Quantum Computing course alongside the Quantum Research Center at the Applied Research Laboratories and a data science education project with MathAction. I have served in a number of mathematics and computer science teacher education roles within the UT Uteach program.
 
