--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2> Software Engineer (ML) and education advocate </h2>
-						<p> Former public school teacher focused on access to emerging technologies for historically undererepresented communities in tech. </p>
+						<h2> AI and Education Researcher and Machine Learning Engineer </h2>
+						<p>I am a former public school teacher focused on building educational technologies informed by education research, and facilitating access to emerging technologies and STEM education for historically undererepresented communities. </p>
 					</header>
 					<div class="highlights">
 						<section>
