--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1> Dr. Joel  A.  Walsh</h1>
-					<p>Software Engineer and Machine Learning researcher/ educator<br />
+					<p>Assistant Professor of Computer Science - Machine Learning Engineeer<br />
 					</p>
 				</div>
 				
