--- a/presentations.html
+++ b/presentations.html
@@ -47,31 +47,21 @@
 
 								<!-- Text -->
 									<h3>Presentations</h3>
-									<p> I have given presentations on social justice and mathematics/ CS education at a number of public-facing and practicioner conferences to include:</p>
+									<p>Aside from academic conferences, I have given more public/practitioner facing presentations on social justice and mathematics/CS education at a number of venues and would love to do more!</p>
 
-<p>
-									”Math and Science as a Critical Lens” presented at the Free Minds, Free People conference, Chicago, IL (July 2014)</p>
+									<p>"Math and Science as a Critical Lens" presented at the Free Minds, Free People conference, Chicago, IL (July 2014)</p>
 
-<p>
-”Payday Loans and Predatory Lending: Investigating Using Technology in an Alge- bra 2 Classroom” presented at the Creating Balance in an Unjust World Conference on Math Education and Social Justice, San Francisco, CA. (January 2016) </p>
+									<p>"Payday Loans and Predatory Lending: Investigating Using Technology in an Algebra 2 Classroom" presented at the Creating Balance in an Unjust World Conference on Math Education and Social Justice, San Francisco, CA. (January 2016)</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xXgZkiv6hqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>
-”Lets Grow a Generation of Data Natives” UT Austin Tedx conference, (April 2019)
-</p>
-
-
-
-<p>
-”Machine Learning Bias: Examining Pretrial Risk Assessment Algorithms” pre- sented at the Creating Balance in an Unjust World Conference on Math Education and Social Justice, Honolulu, HI. (January 2019)</p>
-
-
-
-
-
-
-									 
+									<p>"Lets Grow a Generation of Data Natives" UT Austin Tedx conference, (April 2019)</p>
 									
+									<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+										<iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/xXgZkiv6hqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+									</div>
+
+									<br>
+
+									<p>"Machine Learning Bias: Examining Pretrial Risk Assessment Algorithms" presented at the Creating Balance in an Unjust World Conference on Math Education and Social Justice, Honolulu, HI. (January 2019)</p>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
