--- a/index.html
+++ b/index.html
@@ -33,13 +33,27 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<div class="inner">
-					<h1> Dr. Joel  A.  Walsh</h1>
-					<p>Assistant Professor of Computer Science - Machine Learning Engineeer<br />
-					</p>
-				</div>
-				
-			</section>
+    <div class="inner">
+        <h1> Dr. Joel  A.  Walsh</h1>
+        <p>Assistant Professor of Computer Science - Machine Learning Engineeer<br />
+        </p>
+        
+        <div style="text-align: center; margin-top: 2em; margin-bottom: 2em;">
+            <img 
+                src="assets/images/joel_walsh_headshot.jpg" 
+                alt="Dr. Joel A. Walsh professional headshot" 
+                style="
+                    width: 150px; 
+                    height: 150px; 
+                    object-fit: cover; 
+                    border-radius: 50%; 
+                    border: 4px solid rgba(255, 255, 255, 0.75); 
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+                "
+            >
+        </div>
+        </div>
+</section>
 
 		<!-- Highlights -->
 			<section class="wrapper">
@@ -118,3 +132,4 @@
 
 	</body>
 </html>
+
