--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section id="banner">
     <div class="inner">
         <h1> Dr. Joel  A.  Walsh</h1>
-        <p>Assistant Professor of Computer Science - Machine Learning Engineeer<br />
+        <p>Assistant Professor of Computer Science at Occidental College<br />
         </p>
         
         <div style="text-align: center; margin-top: 2em; margin-bottom: 2em;">
@@ -132,5 +132,6 @@
 
 	</body>
 </html>
+
 
 
